--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -174,3 +174,8 @@
   --bs-form-invalid-color: #ea868f;
   --bs-form-invalid-border-color: #ea868f;
 }
+
+:root {
+  --bs-gutter-x: 1rem;
+  --bs-gutter-y: 1rem;
+}
